--- a/index.html
+++ b/index.html
@@ -158,3 +158,173 @@
 
         <div class="box">
             <span class="number">02</span>
+                      <h3>web design</h3>
+            <p>I design websites that are user friendly and will leave your clients satisfied.</p>
+            <a href="#" class="btn">read more</a>
+        </div>
+
+        <div class="box">
+            <span class="number">03</span>
+            <h3>Excel</h3>
+            <p>am able to format, organize and calculate data in a spreadsheet.</p>
+        <p>This will make information easier to view as data is added or changed</p>
+            <a href="#" class="btn">read more</a>
+        </div>
+
+        <div class="box">
+            <span class="number">04</span>
+            <h3>Data Entry</h3>
+            <p>Entering information or updating records in a database or computer system is my hobby as i spend my time on my pc</p>
+            <a href="#" class="btn">read more</a>
+        </div>
+
+        <div class="box">
+            <span class="number">05</span>
+            <h3>Socialmedia Management</h3>
+            <p>I am working as a professional social media manager,</p>
+            <p>pride myself on having solid relational abilities, tender loving care, 
+                the capacity to perform multiple tasks, and unwavering quality. 
+                I am proactive, dedicated, benevolent, influential, and a quick student.</p>
+            <a href="#" class="btn">read more</a>
+        </div>
+
+        <div class="box">
+            <span class="number">06</span>
+            <h3>freelancing</h3>
+            <p>an online nomad is my second name</p>
+            <a href="#" class="btn">read more</a>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- service section ends -->
+
+<!-- education section starts  -->
+
+<section class="education" id="education">
+
+    <h1 class="heading"> education and experience </h1>
+
+    <div class="row">
+
+        <div class="column">
+
+            <h3 class="title">my education</h3>
+
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2009 - 2012 </div>
+                <h3>primary certificate - St.John primary</h3>
+                <p>Started my primary education at st john where i transfered to another school while i was in standard four.<i>currently
+                    <b>grade 4</b>
+                </i></p>
+                <p>Did my primary education and earned my self a certificate.<b>KCPE</b></p>
+            </div>
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2017 - 2021</div>
+                <h3> high school<i>secondary</i> - OUR LADY OF FATIMA</h3>
+                <p>Here i graduated from high school after five years due to the corona virus pandemic.</p>
+            </div>
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2021 - 2022 </div>
+                <h3>front-end development - multiple institutions</h3>
+                <p>During this period i earn certificates with various institutions like: frecodecamp.com ,
+                     saylor.org and coursera.org</p>
+            </div>
+        </div>
+
+        <div class="column">
+
+            <h3 class="title">my experience</h3>
+
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2020 - 2021 </div>
+                <h3>web development - [working on myself]</h3>
+                <p>Am still doing my personal projects to shappen my skills.</p>
+            </div>
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2021 - 2022 </div>
+                <h3>web development - Excel</h3>
+                <p>Am still doing my personal projects to shappen my skills.</p>
+            </div>
+            <div class="box">
+                <div class="year"> <i class="fas fa-calendar"></i> 2020 - 2021 </div>
+                <h3>web development - ....</h3>
+                <p>Am still doing my personal projects to shappen my skills.</p>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+<!-- education section ends -->
+<!-- portfolio section starts  -->
+
+<section class="portfolio" id="portfolio">
+
+    <h1 class="heading">my portfolio</h1>
+
+    <div class="box-container">
+
+        <a href="#" class="box">
+            <img src="images/project_1.jpg" alt="">
+            <div class="info">project 01</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_2.jpg" alt="">
+            <div class="info">project 02</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_3.jpg" alt="">
+            <div class="info">project 03</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_4.jpg" alt="">
+            <div class="info">project 04</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_5.jpg" alt="">
+            <div class="info">project 05</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_6.jpg" alt="">
+            <div class="info">project 06</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_7.jpg" alt="">
+            <div class="info">project 07</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_8.jpg" alt="">
+            <div class="info">project 08</div>
+        </a>
+
+        <a href="#" class="box">
+            <img src="images/project_9.jpg" alt="">
+            <div class="info">project 09</div>
+        </a>
+
+    </div>
+
+</section>
+
+<!-- portfolio section ends -->
+
+<!--certificates section starts-->
+
+<section class="certification" id="certification">
+    <h1 class="heading">my Certifications</h1>
+
+    <div class="box-container">
+        
+        <div class="box">
