my capstone project html; codes

--- a/index.html
+++ b/index.html
@@ -328,3 +328,119 @@
     <div class="box-container">
         
         <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">01</span>
+            <h3>Front-end development</h3>
+            <p>This is a certificate issued by <a href="https://coursera.org/">coursera.org</a></p>
+            <a href="coursera front-end certificate.pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">02</span>
+            <h3>Entrepreneurial skills</h3>
+            <p>I design websites that are user friendly and will leave your clients satisfied.</p>
+            <a href="Entrepreneurial Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">03</span>
+            <h3>money skills certificate</h3>
+            <p>Certificate acting as aproof that not only can i manage my finances but also other people can entrust me with theirs..</p>
+        <a href="Money Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">04</span>
+            <h3>Responsive-web design</h3>
+            <p>Received my certification by <a href="https://www.freecodecamp.org/">freecodecamp.org</a> for HTML AND CSS.</p>
+            <a href="responsive-web-design certificate.pdf" class="btn" target="_blank">View certificate</a>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">06</span>
+            <h3>spreadsheet certificate</h3>
+            <p>Received  a certificate in spreadsheet by <a href="https://www.saylor.org/">saylor.org</a></p>
+            <a href="spreadsheet certificate.pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+<div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">06</span>
+            <h3>Resume writting certificate</h3>
+            <p>Received  a certificate in resume writting by <a href="https://www.saylor.org/">saylor.org</a></p>
+            <a href="resume writing certificate.pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+        <div class="box">
+            <i class="fas fa-certificate"></i>
+            <span class="number">07</span>
+            <h3>freelancing</h3>
+            <p>Received  a certificate in work skills by ABSA</p>
+            <a href="Work Skills Certificate.pdf" class="btn" target="_blank">view certificate</a>
+        </div>
+    </div>
+
+    </section>
+
+<!--certificates section ends-->
+<!-- contact section starts  -->
+
+<section class="contact" id="contact">
+
+    <h1 class="heading">contact me</h1>
+
+    <div class="row">
+
+        <form action="">
+
+            <div class="inputBox">
+                <input type="text"   required>
+                <label>name</label>
+            </div>
+
+            <div class="inputBox">
+                <input type="email" required placeholder="vitomscatenathe1@gmail.com">
+                <label></label>
+            </div>
+
+            <div class="inputBox">
+                <input type="number" required placeholder="+254799802335">
+                <label></label>
+            </div>
+
+            <div class="inputBox">
+                <input type="text" required placeholder="...">
+                <label>subject</label>
+            </div>
+
+            <div class="inputBox">
+                <textarea required name="" id="" cols="30" rows="10"></textarea>
+                <label>message</label>
+            </div>
+
+            <input type="submit" value="send message" class="btn">
+
+        </form>
+
+        <div class="image">
+            <img src="images/IMG_20220610_164115-01.jpeg" width="300" height="400"    alt="">
+        </div>
+
+    </div>
+</section>
+
+<!-- contact section ends -->
+
+<!-- footer section  -->
+
+<!--footer-->
+<div class="footer">
+    created by <a href="#">Vitoms Catena</a> all rights reserved!!
+</div>
+<!-- custom js file link  -->
+<!-- JavaScript Bundle with Popper -->
+<script src="myscript.js"></script>
+</body>
+</html>   
