--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <span class="number">01</span>
             <h3>Front-end development</h3>
             <p>This is a certificate issued by <a href="https://coursera.org/">coursera.org</a></p>
-            <a href="coursera front-end certificate.pdf" class="btn" target="_blank">view certificate</a>
+            <a href="cert/Entrepreneurial Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
         </div>
 
         <div class="box">
@@ -340,7 +340,7 @@
             <span class="number">02</span>
             <h3>Entrepreneurial skills</h3>
             <p>I design websites that are user friendly and will leave your clients satisfied.</p>
-            <a href="Entrepreneurial Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
+            <a href="cert/Entrepreneurial Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
         </div>
 
         <div class="box">
@@ -348,7 +348,7 @@
             <span class="number">03</span>
             <h3>money skills certificate</h3>
             <p>Certificate acting as aproof that not only can i manage my finances but also other people can entrust me with theirs..</p>
-        <a href="Money Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
+        <a href="cert/Money Skills Certificate (1).pdf" class="btn" target="_blank">view certificate</a>
         </div>
 
         <div class="box">
@@ -356,7 +356,7 @@
             <span class="number">04</span>
             <h3>Responsive-web design</h3>
             <p>Received my certification by <a href="https://www.freecodecamp.org/">freecodecamp.org</a> for HTML AND CSS.</p>
-            <a href="responsive-web-design certificate.pdf" class="btn" target="_blank">View certificate</a>
+            <a href="cert/responsive-web-design certificate.pdf" class="btn" target="_blank">View certificate</a>
         </div>
 
         <div class="box">
@@ -364,21 +364,21 @@
             <span class="number">06</span>
             <h3>spreadsheet certificate</h3>
             <p>Received  a certificate in spreadsheet by <a href="https://www.saylor.org/">saylor.org</a></p>
-            <a href="spreadsheet certificate.pdf" class="btn" target="_blank">view certificate</a>
+            <a href="cert/spreadsheet certificate.pdf" class="btn" target="_blank">view certificate</a>
         </div>
 <div class="box">
             <i class="fas fa-certificate"></i>
             <span class="number">06</span>
             <h3>Resume writting certificate</h3>
             <p>Received  a certificate in resume writting by <a href="https://www.saylor.org/">saylor.org</a></p>
-            <a href="resume writing certificate.pdf" class="btn" target="_blank">view certificate</a>
+            <a href="cert/resume writing certificate.pdf" class="btn" target="_blank">view certificate</a>
         </div>
         <div class="box">
             <i class="fas fa-certificate"></i>
             <span class="number">07</span>
             <h3>freelancing</h3>
             <p>Received  a certificate in work skills by ABSA</p>
-            <a href="Work Skills Certificate.pdf" class="btn" target="_blank">view certificate</a>
+            <a href="cert/Work Skills Certificate.pdf" class="btn" target="_blank">view certificate</a>
         </div>
     </div>
 
