--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="box">
             <span class="number">06</span>
             <h3>freelancing</h3>
-            <p>an online nomad is my second name</p>
+            <p>An online nomad is my second name</p>
             <a href="#" class="btn">read more</a>
         </div>
 
